<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Title Text -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <!-- Main Menu Text -->
    <TextView
        android:id="@+id/tvMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textSize="18sp"
        android:layout_marginBottom="32dp"/>

    <!-- Play Game Button -->
    <Button
        android:id="@+id/btnPlayGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_play_game"
        android:layout_marginBottom="16dp"/>

    <!--    &lt;!&ndash; Game Mode Button &ndash;&gt;-->
    <!--    <Button-->
    <!--        android:id="@+id/btnGameMode"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/btn_game_mode"-->
    <!--        android:layout_marginBottom="16dp"/>-->

    <!-- Settings Button -->
    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_settings"
        android:layout_marginBottom="16dp"/>

    <!-- Exit Button -->
    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit"
        android:layout_marginBottom="16dp"/>
</LinearLayout>